# FACTR_wrs

./: .gitignore  factr_teleop.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bc/lib/bc/: data_record  data_sync  franka_bridge  policy_rollout  replay_traj
install/bc/share/bc/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cameras/lib/cameras/: realsense  zed
install/cameras/share/cameras/: package.dsv  package.ps1  package.sh  package.xml
install/factr_teleop/lib/factr_teleop/: factr_teleop_franka  factr_teleop_grav_comp_demo
install/factr_teleop/share/factr_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/franka_zmq_controller/lib/franka_zmq_controller/: franka_zmq_controller_node
install/franka_zmq_controller/share/franka_zmq_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/python_utils/lib/python_utils/: factr_teleop_franka  factr_teleop_grav_comp_demo
install/python_utils/share/python_utils/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
libfranka/examples/: CMakeLists.txt  franka_zmq_motion_generator.cpp  franka_zmq_torque_control.cpp  generate_cartesian_pose_motion_external_control_loop.cpp
log/: latest_build
src/factr_teleop/: README.md
src/factr_teleop/factr_teleop/: calibrate_franka.py  factr_teleop.py  factr_teleop_franka_zmq.py  factr_teleop_grav_comp_demo.py
src/factr_teleop/factr_teleop/configs/: franka_example.yaml  grav_comp_demo.yaml
src/factr_teleop/factr_teleop/dynamixel/: driver.py
src/factr_teleop/factr_teleop/urdf/: factr_teleop_franka.urdf
src/franka_zmq_controller/: CMakeLists.txt  package.xml
src/franka_zmq_controller/src/: controller_node.cpp  controller_node_bk.cpp
src/python_utils/: setup.py
src/python_utils/python_utils/: global_configs.py  zmq_messenger.py
(+22 files in other folders)
